--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -75,11 +75,11 @@ jobs:
           fi
 
       - name: Save the latest release for ${{ matrix.dir }}
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         run: echo "${{ steps.check_release.outputs.new_release }}" > ${{ matrix.dir }}/LATEST_RELEASE
 
       - name: Commit the latest release for ${{ matrix.dir }}
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         run: |
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
@@ -88,15 +88,15 @@ jobs:
           git push
 
       - name: Set up Docker Buildx
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         uses: docker/setup-buildx-action@v3
 
       - name: Set up QEMU
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         uses: docker/setup-qemu-action@v3
 
       - name: Login to GitHub Container Registry
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.GITHUB_TOKEN }}
@@ -104,7 +104,7 @@ jobs:
           username: ${{ github.actor }}
 
       - name: Build and push multi-platform Docker image
-        if: steps.check_release.outputs.new_release != "false"
+        if: steps.check_release.outputs.new_release != 'false'
         uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.dir }}
