--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -13,8 +13,9 @@ permissions:
 
 jobs:
   generate-matrix:
+    name: Generate Matrix
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      matrix: ${{ env.MATRIX }}
     runs-on: ubuntu-latest
 
     steps:
@@ -40,9 +41,9 @@ jobs:
           MATRIX="$MATRIX]}"
 
           echo "MATRIX=$MATRIX" >> $GITHUB_ENV
-          echo "::set-output name=matrix::$MATRIX"
 
   check-releases-and-build:
+    name: Check Releases & Build
     needs: generate-matrix
     runs-on: ubuntu-latest
     strategy:
@@ -68,46 +69,46 @@ jobs:
 
           if [ "$LATEST_RELEASE" != "$PREVIOUS_RELEASE" ]; then
             echo "New release detected: $LATEST_RELEASE"
-            echo "::set-output name=new_release::$LATEST_RELEASE"
+            echo "NEW_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
           else
             echo "No new release."
-            echo "::set-output name=new_release::false"
+            echo "NEW_RELEASE=false" >> $GITHUB_ENV
           fi
 
       - name: Save the latest release for ${{ matrix.dir }}
-        if: steps.check_release.outputs.new_release != 'false'
-        run: echo "${{ steps.check_release.outputs.new_release }}" > ${{ matrix.dir }}/LATEST_RELEASE
+        if: env.NEW_RELEASE != 'false'
+        run: echo "${{ env.NEW_RELEASE }}" > ${{ matrix.dir }}/LATEST_RELEASE
 
       - name: Commit the latest release for ${{ matrix.dir }}
-        if: steps.check_release.outputs.new_release != 'false'
+        if: env.NEW_RELEASE != 'false'
         run: |
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
           git add ${{ matrix.dir }}/LATEST_RELEASE
-          git commit -m "Update latest release for ${{ matrix.repo }} to ${{ steps.check_release.outputs.new_release }}"
+          git commit -m "Update latest release for ${{ matrix.repo }} to ${{ env.NEW_RELEASE }}"
           git push
 
       - name: Set up Docker Buildx
-        if: steps.check_release.outputs.new_release != 'false'
+        if: env.NEW_RELEASE != 'false'
         uses: docker/setup-buildx-action@v3
 
       - name: Set up QEMU
-        if: steps.check_release.outputs.new_release != 'false'
+        if: env.NEW_RELEASE != 'false'
         uses: docker/setup-qemu-action@v3
 
       - name: Login to GitHub Container Registry
-        if: steps.check_release.outputs.new_release != 'false'
+        if: env.NEW_RELEASE != 'false'
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
           username: ${{ github.actor }}
 
-      - name: Build and push multi-platform Docker image
-        if: steps.check_release.outputs.new_release != 'false'
+      - name: Build and push multi-platform Docker image for ${{ matrix.dir }}
+        if: env.NEW_RELEASE != 'false'
         uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.dir }}
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ github.repository_owner }}/${{ matrix.dir }}:latest,${{ github.repository_owner }}/${{ matrix.dir }}:${{ steps.check_release.outputs.new_release }}
+          tags: ${{ github.repository_owner }}/${{ matrix.dir }}:${{ env.NEW_RELEASE }},${{ github.repository_owner }}/${{ matrix.dir }}:latest
