--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -99,9 +99,9 @@ jobs:
         if: env.NEW_RELEASE != 'false'
         uses: docker/login-action@v3
         with:
-          password: ${{ secrets.GITHUB_TOKEN }}
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push multi-platform Docker image for ${{ matrix.dir }}
         if: env.NEW_RELEASE != 'false'
