--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       bypass_check:
-        default: "true"
+        default: "false"
         description: "Bypass New Version Check"
 
 permissions:
