--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -117,6 +117,10 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ${{ matrix.dir }}
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ github.repository_owner }}/${{ matrix.dir }}:${{ env.NEW_RELEASE }},${{ github.repository_owner }}/${{ matrix.dir }}:latest
+          platforms: |
+            linux/amd64
+            linux/arm64
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.dir }}:${{ env.NEW_RELEASE }}
+            ghcr.io/${{ github.repository_owner }}/${{ matrix.dir }}:latest
