--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -122,4 +122,4 @@ jobs:
             linux/amd64
             linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ matrix.dir }}:latest
+            ghcr.io/${{ github.repository }}:${{ matrix.dir }}
