--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -7,10 +7,6 @@ on:
   schedule:
     - cron: "0 * * * *"
   workflow_dispatch:
-    inputs:
-      bypass_check:
-        default: "false"
-        description: "Bypass New Version Check"
 
 permissions:
   contents: write
@@ -74,9 +70,9 @@ jobs:
           if [ "$LATEST_RELEASE" != "$PREVIOUS_RELEASE" ]; then
             echo "NEW_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
             echo "New release detected: $LATEST_RELEASE"
-          elif [ "${{ github.event.inputs.bypass_check }}" == "true" ]; then
-            echo "NEW_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
-            echo "Bypassing version check as requested."
+          elif [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            echo "NEW_RELEASE=bypass" >> $GITHUB_ENV
+            echo "Bypassing change check due to manual run."
           else
             echo "NEW_RELEASE=false" >> $GITHUB_ENV
             echo "No new release."
