--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -1,6 +1,7 @@
 FROM caddy:builder AS builder
 RUN xcaddy build \
     --with github.com/caddy-dns/cloudflare \
+    --with github.com/caddy-dns/duckdns \
     --with github.com/lucaslorentz/caddy-docker-proxy/v2
 FROM caddy
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
