--- a/gatus/supervisord.conf
+++ b/gatus/supervisord.conf
@@ -2,14 +2,23 @@
 autorestart=true
 command=/app/gatus
 environment=GATUS_CONFIG_PATH="/app/config.yaml"
+startsecs=5
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 
 [program:tailscale]
 autorestart=true
 command=bash -c "until tailscale status &>/dev/null; do sleep 1; done && tailscale up --authkey ${TAILSCALE_TAILNET_KEY} --hostname ${FLY_APP_NAME}-${FLY_MACHINE_ID}"
+startsecs=10
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 
 [program:tailscaled]
 autorestart=true
 command=tailscaled --socket /var/run/tailscale/tailscaled.sock --state /var/lib/tailscale/tailscaled.state
+startsecs=5
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 
 [supervisord]
 nodaemon=true
